--- a/settings/widar.yaml
+++ b/settings/widar.yaml
@@ -20,7 +20,7 @@ args:
 
 dataset_args:
   dataset: "widar"
-  dataset_path: "/home/to_your_path"
+  dataset_path: "/your_path"
   type: "widar"
   raw_structure: False
   select_env: ["E04"]
